added registration tab and user model
Added registration tab with text fields for name, email, password,...
Added user model with attributes like firstName, email, password,...

--- a/ese2020-project-scaffolding-master/frontend/src/app/app.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/app.component.html
@@ -26,4 +26,9 @@
   <mat-tab label="User Login Example">
     <app-user-login></app-user-login>
   </mat-tab>
+
+  <mat-tab label="User Registration Example">
+    <app-user-registration></app-user-registration>
+  </mat-tab>
+
 </mat-tab-group>
