--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
@@ -1,36 +1,45 @@
 <mat-card>
-    <div>
+  <form [formGroup]="userEmailPassword"><div>
       <mat-form-field>
-        <input matInput placeholder="First Name" [(ngModel)]="firstName" name="firstName">
+        <input matInput placeholder="First Name" name="firstName">
       </mat-form-field>
     </div>
     
     <div>
        <mat-form-field>
-        <input matInput placeholder="Last Name" [(ngModel)]="lastName" name="lastName">
+        <input matInput placeholder="Last Name" name="lastName">
       </mat-form-field> 
     </div>
 
     <div>
         <mat-form-field>
-          <input matInput placeholder="User Name" [(ngModel)]="userName" name="userName">
+          <input matInput placeholder="User Name" name="userName">
         </mat-form-field>
       </div>
       
     <div>
          <mat-form-field>
-          <input matInput placeholder="Email" [(ngModel)]="email" name="email" type="email">
-        </mat-form-field> 
+          <input [class.is-invalid]="email.invalid && email.touched" type="email" matInput class="form-control" placeholder="Email" formControlName="email">
+        </mat-form-field>
+        <div *ngIf="(email.invalid && email.touched) || email.dirty">
+          <small *ngIf="email.errors?.required" class="text.danger">Email is required</small>
+          <small *ngIf="email.errors?.pattern" class="text.danger">Please provide a valid email address</small>
+        </div>
     </div>
      
     <div>
         <mat-form-field>
-         <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password">
-       </mat-form-field> 
+         <input [class.is-invalid]="password.invalid && password.touched" matInput type="password" class="form-control" placeholder="Password" formControlName="password">
+       </mat-form-field>
+       <div *ngIf="(password.invalid && password.touched) || password.dirty">
+        <small *ngIf="password.errors?.required" class="text.danger">Password is required</small>
+        <small *ngIf="password.errors?.pattern" class="text.danger">Password requires minimum 7 characters, at least one uppercase letter, one lowercase letter and one special character:</small>
+      </div>
      </div>
 
      <div>
         <button mat-flat-button color="primary" (click)="register()" >Register</button>
      </div>
-  </mat-card>
+  </form> 
+</mat-card>
   
