--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.css
@@ -1,9 +1,10 @@
 .mat-card{
   width: 350px;
-  height: 400px;
+  height: auto;
   display: block;
   margin-left:auto;
   margin-right:auto;
   vertical-align:middle;
 }
+
 
