--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
@@ -7,7 +7,7 @@
         <small *ngIf="firstName.errors?.required" class="text.danger">First Name is required</small>
       </div>
     </div>
-    
+
     <div>
        <mat-form-field>
         <input [class.is-invalid]="lastName.touched" type="text" matInput class="form-control" placeholder="Last Name" formControlName="lastName">
@@ -25,7 +25,7 @@
           <small *ngIf="userName.errors?.required" class="text.danger">User Name is required</small>
         </div>
       </div>
-      
+
     <div>
          <mat-form-field>
           <input [class.is-invalid]="email.invalid && email.touched" type="email" matInput class="form-control" placeholder="Email" formControlName="email">
@@ -35,7 +35,7 @@
           <small *ngIf="email.errors?.pattern" class="text.danger">Please provide a valid email address</small>
         </div>
     </div>
-     
+
     <div>
         <mat-form-field>
          <input [class.is-invalid]="password.invalid && password.touched" matInput [type]="hidePassword ? 'password' : 'text'" class="form-control" placeholder="Password" formControlName="password">
@@ -46,10 +46,32 @@
         <small *ngIf="password.errors?.pattern" class="text.danger">Password requires minimum 7 characters, at least one uppercase letter, one lowercase letter and one special character:</small>
       </div>
      </div>
+    <div>
+      <a href="#optional" (click)="optional=true" [hidden]="optional">Optional</a>
+      <div id="optional" [hidden]="!optional">
+        <div>
+          <mat-form-field>
+          <input [class.is-invalid]="phone.touched" matInput class="form-control" placeholder="Telephone (only swiss)" type="tel" formControlName="phone">
+          </mat-form-field>
+          <div style="..." *ngIf="(phone.invalid && phone.touched) || phone.dirty">
+            <small *ngIf="phone.errors?.pattern" class="text.danger">Please enter a valid phone number</small>
+          </div>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput class="form-control" placeholder="Address" formControlName="address" type="text">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput class="form-control" placeholder="Zip Code/City" formControlName="city" type="text">
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
      <br>
      <div>
         <button mat-flat-button color="primary" (click)="register()" >Register</button>
      </div>
-  </form> 
+  </form>
 </mat-card>
-  
