--- a/ese2020-project-scaffolding-master/frontend/src/app/app.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/app.component.html
@@ -1,4 +1,10 @@
-<mat-toolbar color="primary">
+<app-nav-bar></app-nav-bar>
+<router-outlet></router-outlet>
+
+
+
+
+<!--<mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>ESE-2020 Frontend Scaffolding</span>
   </mat-toolbar-row>
@@ -31,4 +37,4 @@
     <app-user-registration></app-user-registration>
   </mat-tab>
 
-</mat-tab-group>
+</mat-tab-group>-->
