--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
@@ -1,1 +1,13 @@
+.navbar-brand{
+  font-size: 2.5rem;
+  font-weight: bold;
+}
 
+.nav-item{
+  padding: 0 18px;
+}
+
+.nav-link{
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
