--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.css
@@ -6,3 +6,9 @@
   margin-right:auto;
   vertical-align:middle;
 }
+
+.register{
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
