--- a/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
@@ -21,3 +21,9 @@
   <button mat-flat-button color="primary" (click)="accessSecuredEndpoint()">Access Secure Endpoint (only for logged in users)</button>
   {{ secureEndpointResponse }}
 </mat-card>
+
+<mat-card *ngIf="isAdmin">
+  <div>
+    You are an administrator
+  </div>
+</mat-card>
