--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -5,8 +5,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav ml-auto">
-      <a class="nav-link" routerLink="/login">Login/Logout</a>
-      <a class="nav-link" routerLink="/register">Register</a>
+      <a class="nav-link" routerLink="/admin" [hidden]='!isAdmin()'>Admin</a> <!--go to admin page-->
+      <a class="nav-link" routerLink="/login" [hidden]='isLoggedIn()'>Login</a>
+      <a class="nav-link" routerLink="/login" [hidden]='!isLoggedIn()'>Logout</a>
+      <a class="nav-link" routerLink="/register" [hidden]='isLoggedIn()'>Register</a>
     </div>
   </div>
 </nav>
