added dynamic routes for user profiles
the profile of a logged in user can be accessed with localhost:4200/profile/userName.

--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav ml-auto">
       <a class="nav-link" routerLink="/admin" [hidden]='!isAdmin()'>Admin</a> <!--go to admin page-->
-      <a class="nav-link" routerLink="/profile" [hidden]='!isLoggedIn()'>
+      <a class="nav-link" routerLink="/profile/{{ getUserName() }}" [hidden]='!isLoggedIn()'>
         <mat-icon>person</mat-icon>
       </a>
-      <a class="nav-link" routerLink="/login">{{isLoggedIn() ? 'Logout' : 'Login'}}</a>
+      <a class="nav-link" routerLink="/login">{{ isLoggedIn() ? 'Logout' : 'Login'}}</a>
       <a class="nav-link" routerLink="/register" [hidden]='isLoggedIn()'>Register</a>
     </div>
   </div>
