--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
-<h1>Profile - {{userName}}</h1>
+<h1>Profile - {{getUserName()}}</h1>
 <mat-tab-group>
-    <mat-tab label="User Information"></mat-tab>
+    <mat-tab label="User Information">User Information</mat-tab>
     <mat-tab label="Open Offers">Open Offers</mat-tab>
     <mat-tab label="Sold">Sold</mat-tab> <!-- should only be viewable by user -->
     <mat-tab label="Bought">Bought</mat-tab> <!-- should only be viewable by user -->
