link profile to navbar

--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -1,4 +1,6 @@
-<h1>Profile - {{getUserName()}}</h1>
+<div style="margin-top: 10px">
+  <h1>Profile - {{getUserName()}}</h1>
+</div>
 <mat-tab-group>
     <mat-tab label="User Information">User Information</mat-tab>
     <mat-tab label="Open Offers">Open Offers</mat-tab>
