How to get data from Backend example

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -55,6 +55,9 @@
 
   <h2 style="margin-top: 16px;">Recently added in "sell"</h2>
 
+  <div *ngFor="let product of sellProducts | async">
+    {{ product | json }}
+  </div>  
 
   <h2 style="margin-top: 16px;">Recently added in "lend"</h2>
 
