--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
@@ -4,12 +4,16 @@
     display: block;
     margin-left:auto;
     margin-right:auto;
-    vertical-align:middle;
   }
   
-  .createOffer{
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
+.createOffer{
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
   
+.mat-radio-button ~ .mat-radio-button {
+  margin-left: 16px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
