--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
@@ -6,7 +6,7 @@
     margin-right:auto;
   }
   
-.createOffer{
+.createOffer {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 20px;
@@ -16,4 +16,8 @@
   margin-left: 16px;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+
+.select {
+  margin-left: 5px;
 }
