added location for offer of type service

--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -60,6 +60,12 @@
           </select>
         </div>
 
+        <div [hidden]="!(type.value==='Service')" appearance="fill">
+          <mat-form-field>
+            <input type="text" matInput class="form-control" placeholder="Location" formControlName="location">
+          </mat-form-field>
+        </div>
+
 
         <mat-form-field>
           <input [class.is-invalid]="pictureLink.touched && pictureLink.invalid" type="text" matInput class="form-control" placeholder="Picture Link" formControlName="pictureLink">
