changed placeholders for data

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
@@ -33,7 +33,7 @@
     <div>
         <mat-card-content>
             <p>
-            This Product is: 
+            Availability
             </p>
         </mat-card-content>
     </div>
@@ -41,7 +41,7 @@
     <div>
         <mat-card-content>
             <p>
-            This product 
+            Delivery is
             </p>
         </mat-card-content>
     </div>
