--- a/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
@@ -1,14 +1,14 @@
 <mat-card>
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>// title from backend </mat-card-title>
-        <mat-card-title> // price from backend </mat-card-title>
+        <mat-card-title>{{ title }} </mat-card-title>
+        <mat-card-title> {{ price }} </mat-card-title>
     </mat-card-header>
 
     <div>
         <mat-card-content>
             <p>
-            Description:
+            Description: {{ description }}
             </p>
         </mat-card-content>
     </div>
@@ -17,31 +17,43 @@
     <div>
         <mat-card-content>
             <p>
-            location: 
+            Location: {{ location }}
             </p>
         </mat-card-content>
     </div>
 
     <div>
         <mat-card-content>
-            <p>
-            sell or lend
+            <p *ngIf="sellOrLend == true">
+                This product is for sale.
+            </p>
+
+            <p *ngIf="sellOrLend == false">
+                This product can be lent.
             </p>
         </mat-card-content>
     </div>
 
     <div>
         <mat-card-content>
-            <p>
-            Availability
+            <p *ngIf="status == true">
+                This product is available.
+            </p>
+
+            <p *ngIf="status == false">
+                This product is unavailable.
             </p>
         </mat-card-content>
     </div>
 
     <div>
         <mat-card-content>
-            <p>
-            Delivery is
+            <p *ngIf="deliverable == true">
+                This product is deliverable.
+            </p>
+
+            <p *ngIf="deliverable == false">
+                This product is undeliverable.
             </p>
         </mat-card-content>
     </div>
