adjusted to the new product model

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>{{ title }} </mat-card-title>
+        <mat-card-title>{{ category }} </mat-card-title>
         <mat-card-title> {{ price }} </mat-card-title>
     </mat-card-header>
 
