--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -57,17 +57,24 @@
 
   <div *ngFor="let product of sellProducts | async">
     {{ product | json }}
-  </div>  
+
+  </div>
 
   <h2 style="margin-top: 16px;">Recently added in "lend"</h2>
 
+  <div *ngFor="let product of lendProducts | async">
+    {{ product | json }}
+  </div>
 
   <h2 style="margin-top: 16px;">Recently added in "hire"</h2>
+  <div *ngFor="let product of hireProducts | async">
+   {{ product | json }}
+  </div>
 
 
-<div class="footer">
-  Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-</div>
+  <div class="footer">
+    Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+  </div>
 
 
 
