fixed a bug in product-view.component.html

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-view/product-view.component.html
@@ -48,11 +48,11 @@
 
     <div>
         <mat-card-content>
-            <p *ngIf="deliverable == true">
+            <p *ngIf="shippable == true">
                 This product is deliverable.
             </p>
 
-            <p *ngIf="deliverable == false">
+            <p *ngIf="shippable == false">
                 This product is undeliverable.
             </p>
         </mat-card-content>
