Add simple Product-item

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -56,8 +56,8 @@
   <h2 style="margin-top: 16px;">Recently added in "sell"</h2>
 
   <div *ngFor="let product of sellProducts | async">
-    {{ product | json }}
-  </div>  
+    <app-product-item [product] = "product"></app-product-item>
+  </div>
 
   <h2 style="margin-top: 16px;">Recently added in "lend"</h2>
 
