--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -1,6 +1,11 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 80%;">
     <div class="card-body">
-      <p class="card-title">{{product.title}}</p>
-      <p class="card-text">{{product.price}}</p>
+      <h1 class="card-title">{{product.title}}</h1>
+      <p class="card-price">{{product.price}}</p>
+      <p class="card-category">{{product.category}}</p>
+      <p class="card-description">{{product.description}}</p>
+      <p class="card-location">{{product.location}}</p>
+      <p class="card-status">{{product.status}}</p>
+      <p class="card-shippable">{{product.shippable}}</p>
     </div>
   </div>
